tests/paczka1/fuzzy1/80786244.err
Error in line 4: FBobX A999 28,2
Error in line 10: FBobX A46 20,+
Error in line 13: A614 A999 42,7
Error in line 8: CltX A46 192,2
Error in line 21: A614 A614 39,9
Error in line 26: A614 A999 21,3
Error in line 27: A614 A614 61,0
Error in line 18: AuX7L A999 69,4
Error in line 37: C01Yyf A999 62,64
Error in line 23: BYQ9NJM4y A774 56,7
